ci-github): debug
Signed-off-by: Thierry Bugier <tbugier@teclib.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,7 @@ jobs:
       matrix:
         php-versions: [7.4]
         env:
-          - { GLPI_BRANCH: master, SKIP_FUNCTIONAL_TESTS: false }
+          - { GLPI_BRANCH: master }
     services:
       db:
         image: mariadb:10.2
@@ -98,6 +98,7 @@ jobs:
           $SKIP_INSTALL_TESTS || plugin_test_install
           mysql -h$DB_HOST -u$DB_USER -p$DB_PASSWD $OLD_DB_NAME -e "select name,directory,version,state from glpi_plugins WHERE directory IN ('formcreator')"
           $SKIP_TESTS || plugin_test
+          echo skip functional tests value: $SKIP_FUNCTIONAL_TESTS
           $SKIP_FUNCTIONAL_TESTS || plugin_test_functional
           $SKIP_UNINSTALL_TESTS || plugin_test_uninstall
           $SKIP_LINT_TESTS || plugin_test_lint
